# gdlisp

./: .gitignore  .readthedocs.yaml  Cargo.toml  GDLisp.gd  GDLisp.lisp  GDLisp_bootstrapping.lisp  README.md  Rakefile  build.rs  minimal.txt
.github/workflows/: style-clippy.yml  style-docs.yml  test-Godotv3.3.3-Ubuntu.yml  test-Godotv3.4-Ubuntu.yml  test-Godotv3.5-Minimal-Ubuntu.yml  test-Godotv3.5-Mono-Ubuntu.yml  test-Godotv3.5-Ubuntu.yml  test-Godotv3.5-Windows.yml
MacroServer/: TestLoadedFile.gd  main.gd  main.tscn  project.godot
doc/: CompilationStages.md  README.md
doc/internal/: CompilationStages.md  README.md
doc/readthedocs/: conf.py  index.rst  requirements.txt
doc/readthedocs/reference/: classes.rst  command-line.rst  datatypes.rst  expressions.rst  imports.rst  index.rst  lambda-lists.rst  macros.rst  parser.rst  quoting.rst  source-file.rst
doc/readthedocs/tutorial/: classes.rst  control_flow.rst  functions.rst  index.rst  lisping.rst  macros.rst  modules.rst  repl.rst  what-now.rst
examples/: id.lisp  import-example.lisp  simple-functions.lisp
gdextension-api/: Cargo.toml
gdextension-api/src/: build_config.rs  class.rs  constant.rs  function.rs  godot_enum.rs  header.rs  lib.rs  native_structure.rs  singleton.rs
gdextension-api/tests/: integration_tests.rs
gdextension-ffi/: Cargo.toml  README.md  build.rs  wrapper.h
gdextension-ffi/src/: gdlisp.rs  language.rs  lib.rs
gdextension-ffi/src/init/: level.rs  mod.rs
gdextension-ffi/src/interface/: class.rs  data.rs  mod.rs
gdextension-ffi/src/internal/: godot.rs  mod.rs
gdextension-serde/: Cargo.toml
gdextension-serde/src/: error.rs  lib.rs  ser.rs
gdlisp/: Cargo.toml  build.rs
gdlisp-core/: Cargo.toml  tmptest.sh
gdlisp-core/src/: init.rs  instance.rs  language.rs  lib.rs  script.rs  singleton.rs  template.rs
gdlisp-core/src/language/: loader.rs  mod.rs  saver.rs  singleton.rs
gdlisp-core/src/types/: mod.rs  template.rs  validate.rs
gdlisp-parser/: Cargo.toml  build.rs
gdlisp-parser/src/: dotted.rs  lib.rs  literal.rs  parser.lalrpop  sexpr.rs  string.rs  syntax.rs
gdlisp-parser/tests/: parser_test.rs
gdlisp-util/: Cargo.toml
gdlisp-util/src/: debug_wrapper.rs  group_by.rs  lattice.rs  lazy.rs  lib.rs  path.rs  prefix_matcher.rs  source.rs
gdlisp/src/: command_line.rs  main.rs  parser.lalrpop  parser_test.rs
gdlisp/src/compile/: constant.rs  error.rs  frame.rs  import.rs  resource_type.rs
gdlisp/src/gdscript/: arglist.rs  decl.rs  expr.rs  op.rs  pattern.rs
gdlisp/src/graph/: mod.rs  tarjan.rs
gdlisp/src/ir/: classification.rs  decl.rs  declaration_table.rs  expr.rs  identifier.rs  incremental.rs  literal.rs  macros.rs  main_function.rs  mod.rs  quasiquote.rs  (+1 more)
gdlisp/tests/: integration_tests.rs
src/: command_line.rs  lib.rs  main.rs  parser.lalrpop  parser_test.rs  repl.rs
src/compile/: args.rs  constant.rs  error.rs  factory.rs  frame.rs  import.rs  mod.rs  preload_resolver.rs  resource_type.rs  stateful.rs  stmt_wrapper.rs  symbol_table.rs
src/gdscript/: arglist.rs  class_extends.rs  decl.rs  expr.rs  expr_wrapper.rs  inner_class.rs  library.rs  literal.rs  metadata.rs  mod.rs  op.rs  pattern.rs  spacing.rs  stmt.rs
src/graph/: mod.rs  tarjan.rs  top_sort.rs
src/ir/: access_type.rs  arglist.rs  bootstrapping.rs  call_name.rs  classification.rs  closure_names.rs  constant.rs  decl.rs  declaration_table.rs  depends.rs  export.rs  expr.rs  functions.rs  identifier.rs  import.rs  incremental.rs  literal.rs  locals.rs  macros.rs  main_function.rs  mod.rs  quasiquote.rs  special_form.rs  special_ref.rs  symbol_table.rs
src/optimize/: mod.rs
src/pipeline/: can_load.rs  config.rs  error.rs  loader.rs  mod.rs  resolver.rs  source.rs  stdlib_unit.rs  translation_unit.rs
src/runner/: godot.rs  into_gd_file.rs  mod.rs  named_file.rs  path.rs  temporary_copy.rs  version.rs
src/sxp/: ast.rs  dotted.rs  literal.rs  mod.rs  reify.rs  string.rs  syntax.rs
src/util/: debug_wrapper.rs  group_by.rs  lattice.rs  lazy.rs  mod.rs  one.rs  prefix_matcher.rs  recursive.rs
tests/: builtin_function_test.rs  collection_conversion_test.rs  compiler_test.rs  declaration_test.rs  dependencies_test.rs  even_odd_test.rs  factorial_test.rs  flet_test.rs  floating_test.rs  for_test.rs  integration_tests.rs  labels_test.rs  lambda_test.rs  macro_test.rs  quoting_test.rs  special_form_test.rs
tests/common/: mod.rs
tests/gdextension-serde-tests/rust/: Cargo.toml
tests/gdextension-serde-tests/rust/src/: lib.rs  ser_test.rs
tests/test/: builtin_function_test.rs  class_test.rs  collection_conversion_test.rs  compiler_test.rs  concurrency_test.rs  cond_if_test.rs  const_test.rs  declaration_test.rs  dependencies_test.rs  dictionary_test.rs  enum_test.rs  error_test.rs  even_odd_test.rs  factorial_test.rs  flet_test.rs  floating_test.rs  for_test.rs  import_test.rs  labels_test.rs  lambda_class_test.rs  lambda_test.rs  lazy_val_test.rs  let_var_test.rs  list_operator_test.rs  macro_test.rs  meta_test.rs  mod.rs  name_translation_test.rs  object_test.rs  operator_test.rs  quoting_test.rs  signal_test.rs  simple_expr_test.rs  special_form_test.rs  string_test.rs  type_checking_test.rs  typecast_test.rs  while_test.rs
(+167 files in other folders)
