[package]
name = "gdlisp"
version = "0.1.0"
authors = ["Silvio Mayolo <mercerenies@comcast.net>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = "0.19.0"
regex = "1"
phf = { version = "0.8.0", features = ["macros"] }
ordered-float = "2.0.0"
tempfile = "3.0.7"
dyn-clone = "1.0.4"
getopts = "0.2"
walkdir = "2"
json = "0.11.13"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "0.14.4"

[build-dependencies]
lalrpop = { version = "0.19.0", features = ["lexer"] }