[package]
name = "gdextension-api"
version = "1.0.0"
authors = ["Silvio Mayolo <mercerenies@gmail.com>"]
edition = "2018"
#build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"

[build-dependencies]
