[package]
name = "gdextension-ffi"
version = "0.1.0"
authors = ["Silvio Mayolo <mercerenies@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cty = "0.2.2"
gdextension-api = { path = "../gdextension-api" }

[build-dependencies]
bindgen = "0.53.1"