[package]
name = "gdextension-serde"
version = "0.1.0"
authors = ["Silvio Mayolo <mercerenies@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
godot = { git = "https://github.com/Mercerenies/rust-gdextension", branch = "gdlisp-patches" }

[build-dependencies]
