[package]
name = "gdlisp-parser"
version = "0.1.0"
authors = ["Silvio Mayolo <mercerenies@gmail.com>"]
edition = "2018"

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordered-float = "2.0.0"
phf = { version = "0.8.0", features = ["macros"] }
