[package]
name = "gdlisp-parser"
version = "0.1.0"
authors = ["Silvio Mayolo <mercerenies@gmail.com>"]
edition = "2018"
build = "build.rs"

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordered-float = "2.0.0"
phf = { version = "0.8.0", features = ["macros"] }
gdlisp-util = { path = "../gdlisp-util" }
lalrpop-util = "0.19.0"
lazy_static = "1.4.0"

[build-dependencies]
lalrpop = { version = "0.19.0", features = ["lexer"] }